# BitsOfQ

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  vcpkg.json
.github/: build.yml
.github/workflows/: build_linux.yml  build_windows.yml
LetsCode/: CMakeLists.txt
LetsCode/JSON_Serialization/: CMakeLists.txt
LetsCode/JSON_Serialization/E1_requirements_and_simple_types/: CMakeLists.txt  main.cpp
LetsCode/JSON_Serialization/E2_serializing_classes/: CMakeLists.txt  main.cpp
LetsCode/JSON_Serialization/completed_project/: CMakeLists.txt  main.cpp
Metaprogramming/: CMakeLists.txt
Metaprogramming/E01_intro_to_template_metaprogramming/: main.cpp
Metaprogramming/E02_writing_metafunctions/: main.cpp
Metaprogramming/E04_starting_a_metaprogramming_library/: main.cpp
Metaprogramming/E06_composing_metafunctions/: main.cpp
Metaprogramming/E07_compile_time_meets_run_time/: Metaprogramming.h  TestUtilities.h
Metaprogramming/E09_transform_and_filter/: Tuple.h
Metaprogramming/E09b_with_homework_solution/: TestUtilities.h  Tuple.h
Metaprogramming/E10_high_performance_metaprogramming/: build_clang.sh  build_gcc.sh  main.cpp  main_fast.cpp  main_slow.cpp  time_builds.pl
Metaprogramming/E11_eager_vs_lazy_instantiation/: BenchmarkInputs.h  Tests.h  TypeList.h  main.cpp
Metaprogramming/E12_limiting_recursion/: BenchmarkInputs.h  Composed.h  ComposedDefaults64.h  ComposedFastTrack.h  NaiveLazy.h  Tests.h  main.cpp
Metaprogramming/E13_selection/: BenchmarkInputsSmall.h  ComposedDefaults1024.h  ComposedFastTrack64.h  ComposedSelection1024.h  ComposedSelection64.h  Naive.h  main.cpp
Metaprogramming/E14_tacit_programming/: ComposedDefaults.h  HighPerformance.h  Join.h  Tests.h  TypeList.h  main.cpp
Metaprogramming/E3_variadic_templates/: main.cpp
Metaprogramming/E5_improving_our_metaprogramming_library/: main.cpp
Metaprogramming/E7_compile_time_meets_run_time/: Tuple.h  main.cpp
Metaprogramming/E8_tuple_cat/: Metaprogramming.h  TestUtilities.h  Tuple.h  main.cpp
Metaprogramming/E9_transform_and_filter/: main.cpp
Metaprogramming/E9b_with_homework_solution/: Metaprogramming.h  Tuple.h  main.cpp
cmake/: CMakeMacros.cmake  ClangGccShared.cmake  ClangSetup.cmake  CompilerSetup.cmake  CompilerWarnings.cmake  GccSetup.cmake  MsvcSetup.cmake
